# paintbox

./: .gitignore  README.md  a.py  ak.csv  av.csv  build_colors_csv.py  extract_equivalences.py  extract_meta.py  gunze.csv  tamiya.csv
wasm/: Cargo.toml
wasm/src/: hull.rs  lib.rs  search.rs  searcher.rs  sim.rs  tess.rs  wasm.rs
web/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/src/lib/: meta.ts  paints.ts  search.worker.ts  searchClient.ts  stock.svelte.ts  utils.ts
web/src/lib/components/: ColorCode.svelte  ColorSlider.svelte  Hsl.svelte  MultiSelect.svelte  Rgb.svelte  Select.svelte  style.css
web/src/lib/icons/: Github.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  layout.css
web/src/routes/about/: +page.svelte
web/src/routes/palette/: +page.svelte  scene.svelte
web/src/routes/search/: +page.svelte
web/src/routes/stock/: +page.svelte
web/src/wasm-pkg/: package.json  paintbox_wasm.d.ts  paintbox_wasm.js  paintbox_wasm_bg.wasm  paintbox_wasm_bg.wasm.d.ts
web/static/: brands.json  colors.csv  equivalences.csv  series.json
