[package]
name = "paintbox-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
binary_serde = "1.0.25"
csv = "1.4.0"
empfindung = "0.2.6"
fixedbitset = "0.5.7"
kiddo = "5.3.2"
lab = "0.11.0"
mixbox = "2.0.0"
once_cell = "1.21.4"
ordered-float = "5.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
smallvec = "1.15.2"
wasm-bindgen = "0.2.126"
web-sys = { version = "0.3.103", features = ["console"] }
